jobs/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobs
  labels:
    name: jobs
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: jobs
spec:
  podSelector: {}
  policyTypes:
  - Ingress
